// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Modules/Header Colored 1`] = `
.c5 {
  width: 30px;
}

.c5 svg {
  width: 100%;
}

.c6 {
  font-size: 13px;
  line-height: 18px;
  color: #FFF;
}

.c8 {
  font-size: 13px;
  line-height: 18px;
  color: #6D6E70;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 65px;
  text-align: center;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  font-family: "Bebas Neue Regular";
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: uppercase;
}

.c4 > span {
  margin-left: 10px;
  display: inline;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 120px;
  background-color: #FFF;
  box-shadow: 0 0 10px 0 rgba(122,122,122,0.5);
}

.c0 * {
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0px 110px 0px 90px;
  background-color: #6D6E70;
  height: 75px;
}

.c1 * {
  margin-top: 0px;
  margin-bottom: 0px;
}

.c2 {
  margin-top: 30px;
  max-height: 25px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 26px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-left: 90px;
  height: 45px;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c7 * {
  margin-top: 0px;
  margin-bottom: 0px;
}

.c7 > a {
  margin-top: 12px;
  margin-right: 58px;
}

.c7 > a > span {
  font-family: "NB International Pro Medium";
  display: inline;
}

.c7 > a > span {
  font-family: "Bebas Neue Regular";
}

.c7 > a:hover {
  border-bottom: 2px solid #6D6E70;
}

<div
  style={
    Object {
      "backgroundColor": "grey",
    }
  }
>
  <div
    className="c0"
    version="colored"
  >
    <div
      className="c1"
      version="colored"
    >
      <div
        className="c2"
        version="colored"
      >
        <img
          alt="dummy"
          src="/dummy-logo-345X25.png"
        />
      </div>
      <div
        className="c3"
        version="colored"
      >
        <a
          className="c4"
          href="/"
          version="colored"
        >
          <div
            className="c5"
            size="small"
          >
            <svg
              fill="none"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M3.172 3.172C2 4.343 2 6.229 2 10v4c0 3.771 0 5.657 1.172 6.828C4.343 22 6.229 22 10 22h4c3.771 0 5.657 0 6.828-1.172C22 19.657 22 17.771 22 14v-4c0-2.84 0-4.61-.5-5.811V17c-.96 0-1.881-.381-2.56-1.06l-.752-.752c-.722-.722-1.082-1.082-1.491-1.234a2 2 0 0 0-1.394 0c-.409.152-.77.512-1.49 1.234l-.114.113c-.585.585-.878.878-1.189.932a1 1 0 0 1-.699-.134c-.268-.166-.431-.547-.758-1.308L11 14.667c-.75-1.75-1.124-2.624-1.778-2.952a2 2 0 0 0-1.065-.205c-.729.062-1.401.735-2.747 2.08L3.5 15.5V2.887c-.116.086-.225.181-.328.285Z"
                fill="#222"
                fillRule="evenodd"
              />
              <path
                d="M3 10c0-1.914.002-3.249.138-4.256.131-.978.372-1.496.74-1.865.37-.37.888-.61 1.866-.741C6.751 3.002 8.086 3 10 3h4c1.914 0 3.249.002 4.256.138.978.131 1.496.372 1.865.74.37.37.61.888.742 1.866C20.998 6.751 21 8.086 21 10v4c0 1.914-.002 3.249-.137 4.256-.132.978-.373 1.496-.742 1.865-.369.37-.887.61-1.865.742-1.007.135-2.342.137-4.256.137h-4c-1.914 0-3.249-.002-4.256-.137-.978-.132-1.496-.373-1.865-.742-.37-.369-.61-.887-.741-1.865C3.002 17.249 3 15.914 3 14v-4Z"
                stroke="#222"
                strokeWidth={2}
              />
              <circle
                cx={15}
                cy={9}
                fill="#222"
                r={2}
              />
            </svg>
          </div>
          <span
            className="c6"
            color="light"
            size="xs"
          >
            Carrieres
          </span>
        </a>
        <a
          className="c4"
          href="/"
          version="colored"
        >
          <div
            className="c5"
            size="small"
          >
            <svg
              fill="none"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M3.172 3.172C2 4.343 2 6.229 2 10v4c0 3.771 0 5.657 1.172 6.828C4.343 22 6.229 22 10 22h4c3.771 0 5.657 0 6.828-1.172C22 19.657 22 17.771 22 14v-4c0-2.84 0-4.61-.5-5.811V17c-.96 0-1.881-.381-2.56-1.06l-.752-.752c-.722-.722-1.082-1.082-1.491-1.234a2 2 0 0 0-1.394 0c-.409.152-.77.512-1.49 1.234l-.114.113c-.585.585-.878.878-1.189.932a1 1 0 0 1-.699-.134c-.268-.166-.431-.547-.758-1.308L11 14.667c-.75-1.75-1.124-2.624-1.778-2.952a2 2 0 0 0-1.065-.205c-.729.062-1.401.735-2.747 2.08L3.5 15.5V2.887c-.116.086-.225.181-.328.285Z"
                fill="#222"
                fillRule="evenodd"
              />
              <path
                d="M3 10c0-1.914.002-3.249.138-4.256.131-.978.372-1.496.74-1.865.37-.37.888-.61 1.866-.741C6.751 3.002 8.086 3 10 3h4c1.914 0 3.249.002 4.256.138.978.131 1.496.372 1.865.74.37.37.61.888.742 1.866C20.998 6.751 21 8.086 21 10v4c0 1.914-.002 3.249-.137 4.256-.132.978-.373 1.496-.742 1.865-.369.37-.887.61-1.865.742-1.007.135-2.342.137-4.256.137h-4c-1.914 0-3.249-.002-4.256-.137-.978-.132-1.496-.373-1.865-.742-.37-.369-.61-.887-.741-1.865C3.002 17.249 3 15.914 3 14v-4Z"
                stroke="#222"
                strokeWidth={2}
              />
              <circle
                cx={15}
                cy={9}
                fill="#222"
                r={2}
              />
            </svg>
          </div>
          <span
            className="c6"
            color="light"
            size="xs"
          >
            Contatti
          </span>
        </a>
        <a
          className="c4"
          href="/"
          version="colored"
        >
          <div
            className="c5"
            size="small"
          >
            <svg
              fill="none"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M3.172 3.172C2 4.343 2 6.229 2 10v4c0 3.771 0 5.657 1.172 6.828C4.343 22 6.229 22 10 22h4c3.771 0 5.657 0 6.828-1.172C22 19.657 22 17.771 22 14v-4c0-2.84 0-4.61-.5-5.811V17c-.96 0-1.881-.381-2.56-1.06l-.752-.752c-.722-.722-1.082-1.082-1.491-1.234a2 2 0 0 0-1.394 0c-.409.152-.77.512-1.49 1.234l-.114.113c-.585.585-.878.878-1.189.932a1 1 0 0 1-.699-.134c-.268-.166-.431-.547-.758-1.308L11 14.667c-.75-1.75-1.124-2.624-1.778-2.952a2 2 0 0 0-1.065-.205c-.729.062-1.401.735-2.747 2.08L3.5 15.5V2.887c-.116.086-.225.181-.328.285Z"
                fill="#222"
                fillRule="evenodd"
              />
              <path
                d="M3 10c0-1.914.002-3.249.138-4.256.131-.978.372-1.496.74-1.865.37-.37.888-.61 1.866-.741C6.751 3.002 8.086 3 10 3h4c1.914 0 3.249.002 4.256.138.978.131 1.496.372 1.865.74.37.37.61.888.742 1.866C20.998 6.751 21 8.086 21 10v4c0 1.914-.002 3.249-.137 4.256-.132.978-.373 1.496-.742 1.865-.369.37-.887.61-1.865.742-1.007.135-2.342.137-4.256.137h-4c-1.914 0-3.249-.002-4.256-.137-.978-.132-1.496-.373-1.865-.742-.37-.369-.61-.887-.741-1.865C3.002 17.249 3 15.914 3 14v-4Z"
                stroke="#222"
                strokeWidth={2}
              />
              <circle
                cx={15}
                cy={9}
                fill="#222"
                r={2}
              />
            </svg>
          </div>
          <span
            className="c6"
            color="light"
            size="xs"
          >
            Ricerca
          </span>
        </a>
        <a
          className="c4"
          href="/"
          version="colored"
        >
          <div
            className="c5"
            size="small"
          >
            <svg
              fill="none"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M3.172 3.172C2 4.343 2 6.229 2 10v4c0 3.771 0 5.657 1.172 6.828C4.343 22 6.229 22 10 22h4c3.771 0 5.657 0 6.828-1.172C22 19.657 22 17.771 22 14v-4c0-2.84 0-4.61-.5-5.811V17c-.96 0-1.881-.381-2.56-1.06l-.752-.752c-.722-.722-1.082-1.082-1.491-1.234a2 2 0 0 0-1.394 0c-.409.152-.77.512-1.49 1.234l-.114.113c-.585.585-.878.878-1.189.932a1 1 0 0 1-.699-.134c-.268-.166-.431-.547-.758-1.308L11 14.667c-.75-1.75-1.124-2.624-1.778-2.952a2 2 0 0 0-1.065-.205c-.729.062-1.401.735-2.747 2.08L3.5 15.5V2.887c-.116.086-.225.181-.328.285Z"
                fill="#222"
                fillRule="evenodd"
              />
              <path
                d="M3 10c0-1.914.002-3.249.138-4.256.131-.978.372-1.496.74-1.865.37-.37.888-.61 1.866-.741C6.751 3.002 8.086 3 10 3h4c1.914 0 3.249.002 4.256.138.978.131 1.496.372 1.865.74.37.37.61.888.742 1.866C20.998 6.751 21 8.086 21 10v4c0 1.914-.002 3.249-.137 4.256-.132.978-.373 1.496-.742 1.865-.369.37-.887.61-1.865.742-1.007.135-2.342.137-4.256.137h-4c-1.914 0-3.249-.002-4.256-.137-.978-.132-1.496-.373-1.865-.742-.37-.369-.61-.887-.741-1.865C3.002 17.249 3 15.914 3 14v-4Z"
                stroke="#222"
                strokeWidth={2}
              />
              <circle
                cx={15}
                cy={9}
                fill="#222"
                r={2}
              />
            </svg>
          </div>
          <span
            className="c6"
            color="light"
            size="xs"
          >
            Italia
          </span>
        </a>
      </div>
    </div>
    <div
      className="c7"
      version="colored"
    >
      <a
        href="/"
      >
        <span
          className="c8"
          color="primary"
          size="xs"
        >
          AZIENDA
        </span>
      </a>
      <a
        href="/"
      >
        <span
          className="c8"
          color="primary"
          size="xs"
        >
          PRODOTTI
        </span>
      </a>
      <a
        href="/"
      >
        <span
          className="c8"
          color="primary"
          size="xs"
        >
          SERVIZI
        </span>
      </a>
      <a
        href="/"
      >
        <span
          className="c8"
          color="primary"
          size="xs"
        >
          CASE HISTORY
        </span>
      </a>
      <a
        href="/"
      >
        <span
          className="c8"
          color="primary"
          size="xs"
        >
          HSD NEL MONDO
        </span>
      </a>
      <a
        href="/"
      >
        <span
          className="c8"
          color="primary"
          size="xs"
        >
          NEWS ED EVENTI
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modules/Header Transparent 1`] = `
.c5 {
  width: 30px;
}

.c5 svg {
  width: 100%;
}

.c6 {
  font-size: 13px;
  line-height: 18px;
  color: #FFF;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 65px;
  text-align: center;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  font-family: "NB International Pro Book";
  font-weight: 300;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.c4 > span {
  margin-left: 10px;
  display: inline;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 134px;
}

.c0 * {
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0px 110px 0px 90px;
  height: 95px;
}

.c1 * {
  margin-top: 0px;
  margin-bottom: 0px;
}

.c2 {
  margin-top: 30px;
  max-height: 35px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 36px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-left: 90px;
  height: 45px;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-top: 1px solid rgb(244,244,244,0.2);
}

.c7 * {
  margin-top: 0px;
  margin-bottom: 0px;
}

.c7 > a {
  margin-top: 12px;
  margin-right: 58px;
}

.c7 > a > span {
  font-family: "NB International Pro Medium";
  display: inline;
}

<div
  style={
    Object {
      "backgroundColor": "grey",
    }
  }
>
  <div
    className="c0"
    version="transparent"
  >
    <div
      className="c1"
      version="transparent"
    >
      <div
        className="c2"
        version="transparent"
      >
        <img
          alt="dummy"
          src="/dummy-logo-285X35.png"
        />
      </div>
      <div
        className="c3"
        version="transparent"
      >
        <a
          className="c4"
          href="/"
          version="transparent"
        >
          <div
            className="c5"
            size="small"
          >
            <svg
              fill="none"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M3.172 3.172C2 4.343 2 6.229 2 10v4c0 3.771 0 5.657 1.172 6.828C4.343 22 6.229 22 10 22h4c3.771 0 5.657 0 6.828-1.172C22 19.657 22 17.771 22 14v-4c0-2.84 0-4.61-.5-5.811V17c-.96 0-1.881-.381-2.56-1.06l-.752-.752c-.722-.722-1.082-1.082-1.491-1.234a2 2 0 0 0-1.394 0c-.409.152-.77.512-1.49 1.234l-.114.113c-.585.585-.878.878-1.189.932a1 1 0 0 1-.699-.134c-.268-.166-.431-.547-.758-1.308L11 14.667c-.75-1.75-1.124-2.624-1.778-2.952a2 2 0 0 0-1.065-.205c-.729.062-1.401.735-2.747 2.08L3.5 15.5V2.887c-.116.086-.225.181-.328.285Z"
                fill="#222"
                fillRule="evenodd"
              />
              <path
                d="M3 10c0-1.914.002-3.249.138-4.256.131-.978.372-1.496.74-1.865.37-.37.888-.61 1.866-.741C6.751 3.002 8.086 3 10 3h4c1.914 0 3.249.002 4.256.138.978.131 1.496.372 1.865.74.37.37.61.888.742 1.866C20.998 6.751 21 8.086 21 10v4c0 1.914-.002 3.249-.137 4.256-.132.978-.373 1.496-.742 1.865-.369.37-.887.61-1.865.742-1.007.135-2.342.137-4.256.137h-4c-1.914 0-3.249-.002-4.256-.137-.978-.132-1.496-.373-1.865-.742-.37-.369-.61-.887-.741-1.865C3.002 17.249 3 15.914 3 14v-4Z"
                stroke="#222"
                strokeWidth={2}
              />
              <circle
                cx={15}
                cy={9}
                fill="#222"
                r={2}
              />
            </svg>
          </div>
          <span
            className="c6"
            color="light"
            size="xs"
          >
            Carrieres
          </span>
        </a>
        <a
          className="c4"
          href="/"
          version="transparent"
        >
          <div
            className="c5"
            size="small"
          >
            <svg
              fill="none"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M3.172 3.172C2 4.343 2 6.229 2 10v4c0 3.771 0 5.657 1.172 6.828C4.343 22 6.229 22 10 22h4c3.771 0 5.657 0 6.828-1.172C22 19.657 22 17.771 22 14v-4c0-2.84 0-4.61-.5-5.811V17c-.96 0-1.881-.381-2.56-1.06l-.752-.752c-.722-.722-1.082-1.082-1.491-1.234a2 2 0 0 0-1.394 0c-.409.152-.77.512-1.49 1.234l-.114.113c-.585.585-.878.878-1.189.932a1 1 0 0 1-.699-.134c-.268-.166-.431-.547-.758-1.308L11 14.667c-.75-1.75-1.124-2.624-1.778-2.952a2 2 0 0 0-1.065-.205c-.729.062-1.401.735-2.747 2.08L3.5 15.5V2.887c-.116.086-.225.181-.328.285Z"
                fill="#222"
                fillRule="evenodd"
              />
              <path
                d="M3 10c0-1.914.002-3.249.138-4.256.131-.978.372-1.496.74-1.865.37-.37.888-.61 1.866-.741C6.751 3.002 8.086 3 10 3h4c1.914 0 3.249.002 4.256.138.978.131 1.496.372 1.865.74.37.37.61.888.742 1.866C20.998 6.751 21 8.086 21 10v4c0 1.914-.002 3.249-.137 4.256-.132.978-.373 1.496-.742 1.865-.369.37-.887.61-1.865.742-1.007.135-2.342.137-4.256.137h-4c-1.914 0-3.249-.002-4.256-.137-.978-.132-1.496-.373-1.865-.742-.37-.369-.61-.887-.741-1.865C3.002 17.249 3 15.914 3 14v-4Z"
                stroke="#222"
                strokeWidth={2}
              />
              <circle
                cx={15}
                cy={9}
                fill="#222"
                r={2}
              />
            </svg>
          </div>
          <span
            className="c6"
            color="light"
            size="xs"
          >
            Contatti
          </span>
        </a>
        <a
          className="c4"
          href="/"
          version="transparent"
        >
          <div
            className="c5"
            size="small"
          >
            <svg
              fill="none"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M3.172 3.172C2 4.343 2 6.229 2 10v4c0 3.771 0 5.657 1.172 6.828C4.343 22 6.229 22 10 22h4c3.771 0 5.657 0 6.828-1.172C22 19.657 22 17.771 22 14v-4c0-2.84 0-4.61-.5-5.811V17c-.96 0-1.881-.381-2.56-1.06l-.752-.752c-.722-.722-1.082-1.082-1.491-1.234a2 2 0 0 0-1.394 0c-.409.152-.77.512-1.49 1.234l-.114.113c-.585.585-.878.878-1.189.932a1 1 0 0 1-.699-.134c-.268-.166-.431-.547-.758-1.308L11 14.667c-.75-1.75-1.124-2.624-1.778-2.952a2 2 0 0 0-1.065-.205c-.729.062-1.401.735-2.747 2.08L3.5 15.5V2.887c-.116.086-.225.181-.328.285Z"
                fill="#222"
                fillRule="evenodd"
              />
              <path
                d="M3 10c0-1.914.002-3.249.138-4.256.131-.978.372-1.496.74-1.865.37-.37.888-.61 1.866-.741C6.751 3.002 8.086 3 10 3h4c1.914 0 3.249.002 4.256.138.978.131 1.496.372 1.865.74.37.37.61.888.742 1.866C20.998 6.751 21 8.086 21 10v4c0 1.914-.002 3.249-.137 4.256-.132.978-.373 1.496-.742 1.865-.369.37-.887.61-1.865.742-1.007.135-2.342.137-4.256.137h-4c-1.914 0-3.249-.002-4.256-.137-.978-.132-1.496-.373-1.865-.742-.37-.369-.61-.887-.741-1.865C3.002 17.249 3 15.914 3 14v-4Z"
                stroke="#222"
                strokeWidth={2}
              />
              <circle
                cx={15}
                cy={9}
                fill="#222"
                r={2}
              />
            </svg>
          </div>
          <span
            className="c6"
            color="light"
            size="xs"
          >
            Ricerca
          </span>
        </a>
        <a
          className="c4"
          href="/"
          version="transparent"
        >
          <div
            className="c5"
            size="small"
          >
            <svg
              fill="none"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M3.172 3.172C2 4.343 2 6.229 2 10v4c0 3.771 0 5.657 1.172 6.828C4.343 22 6.229 22 10 22h4c3.771 0 5.657 0 6.828-1.172C22 19.657 22 17.771 22 14v-4c0-2.84 0-4.61-.5-5.811V17c-.96 0-1.881-.381-2.56-1.06l-.752-.752c-.722-.722-1.082-1.082-1.491-1.234a2 2 0 0 0-1.394 0c-.409.152-.77.512-1.49 1.234l-.114.113c-.585.585-.878.878-1.189.932a1 1 0 0 1-.699-.134c-.268-.166-.431-.547-.758-1.308L11 14.667c-.75-1.75-1.124-2.624-1.778-2.952a2 2 0 0 0-1.065-.205c-.729.062-1.401.735-2.747 2.08L3.5 15.5V2.887c-.116.086-.225.181-.328.285Z"
                fill="#222"
                fillRule="evenodd"
              />
              <path
                d="M3 10c0-1.914.002-3.249.138-4.256.131-.978.372-1.496.74-1.865.37-.37.888-.61 1.866-.741C6.751 3.002 8.086 3 10 3h4c1.914 0 3.249.002 4.256.138.978.131 1.496.372 1.865.74.37.37.61.888.742 1.866C20.998 6.751 21 8.086 21 10v4c0 1.914-.002 3.249-.137 4.256-.132.978-.373 1.496-.742 1.865-.369.37-.887.61-1.865.742-1.007.135-2.342.137-4.256.137h-4c-1.914 0-3.249-.002-4.256-.137-.978-.132-1.496-.373-1.865-.742-.37-.369-.61-.887-.741-1.865C3.002 17.249 3 15.914 3 14v-4Z"
                stroke="#222"
                strokeWidth={2}
              />
              <circle
                cx={15}
                cy={9}
                fill="#222"
                r={2}
              />
            </svg>
          </div>
          <span
            className="c6"
            color="light"
            size="xs"
          >
            Italia
          </span>
        </a>
      </div>
    </div>
    <div
      className="c7"
      version="transparent"
    >
      <a
        href="/"
      >
        <span
          className="c6"
          color="light"
          size="xs"
        >
          AZIENDA
        </span>
      </a>
      <a
        href="/"
      >
        <span
          className="c6"
          color="light"
          size="xs"
        >
          PRODOTTI
        </span>
      </a>
      <a
        href="/"
      >
        <span
          className="c6"
          color="light"
          size="xs"
        >
          SERVIZI
        </span>
      </a>
      <a
        href="/"
      >
        <span
          className="c6"
          color="light"
          size="xs"
        >
          CASE HISTORY
        </span>
      </a>
      <a
        href="/"
      >
        <span
          className="c6"
          color="light"
          size="xs"
        >
          HSD NEL MONDO
        </span>
      </a>
      <a
        href="/"
      >
        <span
          className="c6"
          color="light"
          size="xs"
        >
          NEWS ED EVENTI
        </span>
      </a>
    </div>
  </div>
</div>
`;
